--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,7 +1,10 @@
  :root {
-        /* Put variables here */
-        
-
+     /* Put variables here */
+     --main-color: #bb9457;
+     --accent-1: #432818;
+     --accent-2: #ffe6a7;
+     --accent-3: #99582a;
+     --accent-4: #6f1d1b;
    }
    * {
        margin: 0;
@@ -10,14 +13,14 @@
        font-family: 'Roboto Condensed', sans-serif;
    }
    body {
-       background: lightgray;
+       background: var(--main-color);
    }
    header {
        padding: 2rem;
        text-align: center;
    }
    nav {
-       background: black;
+       background: var(--accent-1);
        color: white;
    }
    nav ul{
@@ -40,13 +43,13 @@
    }
    
    footer {
-      background: black;
+      background: var(--accent-1);
       color: white;
       padding: 3rem;
       min-height: 10vh;
    }
    .container {
-      background: burlywood;
+      background: var(--accent-2);
       padding: 1rem;
       min-height: 60vh;
       width: 80%;
@@ -74,7 +77,7 @@
      box-shadow: 10px 5px 5px 0px rgba(0,0,0,0.25);
    }
    .section-item:hover {
-     border: 3px yellow solid;
+     border: 3px brown solid;
      box-shadow: 16px 8px 8px 0px rgba(0,0,0,0.25);
      background: lightyellow;
    }
@@ -89,7 +92,7 @@
      font-size: 20vh;
    }
    .section-item h4 {
-     background-color: lightgray;
+     background-color: lightpink;
      padding: 1rem;
      font-size: 1.75rem;
    }
@@ -136,7 +139,7 @@
      padding: 2vh 0;
    }
    .row-button {
-     background: darkred;
+     background: hotpink;
      color: white;
      display: block;
      padding: 1.25rem;
@@ -146,11 +149,11 @@
      text-align: center;
      font-size: 1.25rem;
      border-radius: 8px;
-     transition: background-color .5s ease;
+     transition: background-color 1s ease;
    }
    .row-button:hover {
-     background-color: rgba(139, 0, 0, 0.5);
-     color: darkred;
+     background-color: lightpink;
+     color: white;
      box-shadow: 3px 11px 10px -1px rgba(100, 100, 100, 0.69);
    }
    .contact {
@@ -199,6 +202,18 @@
         }
         .sectiom-item {
           flex-basis: 92%;
+        }
+        .row {
+          flex-direction: column;
+        }
+        .section-header {
+          text-align: center;
+        }
+        .row-button {
+          max-width: 60vw;
+        }
+        .contact {
+          align-items: center;
         }
    }
    
